--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html>
 <head>
   <title>Noah Wimmer</title>
+  <meta name="description" content=""/>
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="" type="image/x-icon">
 </head>
 <body>
+    <a href="mailto:hi@noahwimmer.com">
+        <h1>Noah Wimmer</h1>
+    </a>    
 </body>
 </html>
