--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <title>Noah Wimmer</title>
   <meta name="description" content=""/>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="" type="image/x-icon">
 </head>
 <body>
